--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>Public Page</title>
+<title>Login Page</title>
 </head>
 </body>
-<h1>Public Page</h1>
+<h1>This is where a loging link to the demos will go</h1>
 </body>
