--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 </head>
 </body>
 <h1>This is where a loging link to the demos will go</h1>
+<a href="private/index.html">Go To Sub Folder</a>
 </body>
